crates/analyzer/tests/snapshots/errors__call_send_value_with_generic_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `send_value` function does not expect generic arguments
  ┌─ [snippet]:3:13
  │
3 │   send_value<10>(address(0), 1)
  │             ^^^^ unexpected generic argument list


