crates/analyzer/tests/snapshots/errors__call_send_value_without_parameter.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `send_value` expects 2 arguments, but 0 were provided
  ┌─ [snippet]:3:3
  │
3 │   send_value()
  │   ^^^^^^^^^^-- supplied 0 arguments
  │   │          
  │   expects 2 arguments


