crates/analyzer/tests/snapshots/errors__call_to_pure_struct_fn_on_instance.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `foo` must be called without `self`
  ┌─ compile_errors/call_to_pure_struct_fn_on_instance.fe:9:15
  │
9 │         Bar().foo(1)
  │               ^^^ function does not take self
  │
  = Suggestion: try `Bar::foo(...)` instead of `self.foo(...)`


