crates/analyzer/tests/snapshots/errors__call_trait_assoc_fn_on_invisible_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: error_string_ingot(&path)

---
error: the struct `Bar` is private
  ┌─ compile_errors/call_trait_assoc_fn_on_invisible_type/src/main.fe:5:5
  │
5 │     foo::Bar::do()
  │     ^^^^^^^^^^^^ this struct is not `pub`
  │
  ┌─ compile_errors/call_trait_assoc_fn_on_invisible_type/src/foo.fe:5:8
  │
5 │ struct Bar {}
  │        --- `Bar` is defined here
  │
  = `Bar` can only be used within `foo`
  = Hint: use `pub` to make `Bar` visible from outside of `foo`


